# resume-md

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  flake.nix  main.py  pyproject.toml  regen_examples.sh  test.sh
.cursor/rules/: .cursorrules
.github/workflows/: ci.yml  publish.yml  release.yml
example/: ats_info_extracted.md  ats_info_test.html  ats_info_test.md  example1.html  example1.md  example2.html  example2.md  page_break_test.html  page_break_test.md
resume_md/: components.py  renderer.py  tokenizer.py
tests/: __init__.py  test_tokenizer.py
